Update index.html with cafeteria dropdown

--- a/index.html
+++ b/index.html
@@ -181,6 +181,16 @@
       </details>
 
       <details>
+        <summary>UW Cafeterias</summary>
+        <div class="accordion-content">
+          <a href="https://depts.washington.edu/plazacaf/" 
+            class="sparkle-btn" target="_blank" rel="noopener">UW Montlake Plaza Cafe</a>
+          <a href="https://one.uwmedicine.org/sites/hmc/NutritionFoodServices/Pages/CafeteriaMenu.aspx" 
+            class="sparkle-btn" target="_blank" rel="noopener">Harborview Cafeteria</a>
+        </div>
+      </details>
+
+      <details>
         <summary>Clinic Resources</summary>
         <div class="accordion-content">
           <a href="https://www2a.cdc.gov/vaccines/m/pneumo/agegroup.html" class="sparkle-btn" target="_blank" rel="noopener">Pneumorecs</a>
@@ -222,9 +232,9 @@
     <div class="modal-card">
       <button class="modal-close" id="huskyClose" aria-label="Close">×</button>
       <div class="modal-body">
-        <div class="husky-top">GHitKU</div>
+        <div class="husky-top">GHit∞LS</div>
         <img src="" alt="Random husky" class="husky-img" id="huskyImg" />
-        <div class="husky-bottom">Greatest Housestaff in the Known Universe</div>
+        <div class="husky-bottom">Greatest Housestaff in the Infinite Lore of Spacetime</div>
       </div>
     </div>
   </div>
