epic optimization link update 2

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <article class="card" id="col3">
           <h2>Tools</h2>
           <div class="links">
-            <a href="https://uwnetid-my.sharepoint.com/:f:/r/personal/jblooms_uw_edu/Documents/Cheat%20codes/Epic%20and%20CPRS%20Efficiency%20AHD?csf=1&web=1&e=biHzd7" class="sparkle-btn" target="_blank" rel="noopener">Epic Optimization</a>
+            <a href="https://uwnetid-my.sharepoint.com/:f:/g/personal/jblooms_uw_edu/Etxbqd-lIQxMrdlzvxdMcsUBA1OPU08pZ2q1wBEbjZWTJg?email=auschen%40uw.edu&e=6S8vec" class="sparkle-btn" target="_blank" rel="noopener">Epic Optimization</a>
             <a href="https://uwnetid-my.sharepoint.com/personal/mackhh_uw_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fmackhh%5Fuw%5Fedu%2FDocuments%2FMack%27s%20Frameworks&ga=1" class="sparkle-btn" target="_blank" rel="noopener">Frameworks by Mack</a>
             <a href="https://www.openevidence.com/" class="sparkle-btn" target="_blank" rel="noopener">OpenEvidence</a>
             <a href="https://chatgpt.com/" class="sparkle-btn" target="_blank" rel="noopener">ChatGPT</a>
