--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <span class="break"><a href="https://depts.washington.edu/comtools/" class="sparkle-btn" target="_blank" rel="noopener">UW Comm Toolkit</a></span>
             <a href="https://access.uwmedicine.org/logon/LogonPoint/tmindex.html" class="sparkle-btn" target="_blank" rel="noopener">Epic Access</a>
             <a href="https://citrixaccess.va.gov/vpn/index_citrix_splash.html" class="sparkle-btn" target="_blank" rel="noopener">CPRS Access</a>
+            <a href="https://forms.office.com/r/etEDk5vYC3or" class="sparkle-btn" target="_blank" rel="noopener">Fellowship Workshop Signup</a>
           </div>
         </article>
 
@@ -222,6 +223,7 @@
       <details>
         <summary>Clinic Resources</summary>
         <div class="accordion-content">
+          <a href="https://app.asccp.org" class="sparkle-btn" target="_blank" rel="noopener">ASCCP app</a>
           <a href="https://www2a.cdc.gov/vaccines/m/pneumo/agegroup.html" class="sparkle-btn" target="_blank" rel="noopener">Pneumorecs</a>
           <a href="https://dol.wa.gov/forms/view/420073/download?inline" class="sparkle-btn" target="_blank" rel="noopener">Disabled Parking Application</a>
           <a href="https://www.fammed.wisc.edu/files/webfm-uploads/documents/outreach/im/handout_elimination_diet_patient.pdf" class="sparkle-btn" target="_blank" rel="noopener">Food Elimination Diet</a>
