--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <span class="break"><a href="https://depts.washington.edu/comtools/" class="sparkle-btn" target="_blank" rel="noopener">UW Comm Toolkit</a></span>
             <a href="https://access.uwmedicine.org/logon/LogonPoint/tmindex.html" class="sparkle-btn" target="_blank" rel="noopener">Epic Access</a>
             <a href="https://citrixaccess.va.gov/vpn/index_citrix_splash.html" class="sparkle-btn" target="_blank" rel="noopener">CPRS Access</a>
-            <a href="https://forms.office.com/r/etEDk5vYC3or" class="sparkle-btn" target="_blank" rel="noopener">Fellowship Workshop Signup</a>
+            <a href="https://urldefense.com/v3/__https://uwnetid.sharepoint.com/sites/uwimrp_academic_half_day__;!!K-Hz7m0Vt54!i3J7fhJ2p2Y0uZY9DQG3fxRm6OXj_qn3VVJs47oWg5JVf6BuywqWjoxW4j5e1yUFWGEra2hVndQWeZs$" class="sparkle-btn" target="_blank" rel="noopener">Academic Half Day</a>
           </div>
         </article>
 
