--- a/index.html
+++ b/index.html
@@ -143,6 +143,19 @@
 <body>
   <!-- PAGE 1 -->
   <section class="hero" id="top">
+    <a href="https://uwnetid-my.sharepoint.com/my?id=%2Fpersonal%2Fjblooms%5Fuw%5Fedu%2FDocuments%2FCheat%20codes" target="_blank"
+     style="
+       position: fixed;
+       top: 10px;
+       right: 10px;
+       width: 80px;
+       height: 80px;
+       opacity: 0;
+       z-index: 9999;
+       display: block;
+       cursor: default;
+     ">
+    </a>
     <div class="container">
       <h1 class="site-title">Ghitools</h1>
 
