Index.html Tribute

--- a/index.html
+++ b/index.html
@@ -260,6 +260,10 @@
 
       <div class="scroll-cue"><a href="#toolkits" style="color:inherit;text-decoration:none">Scroll for more ↓</a></div>
     </div>
+
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+    <div class="credit" style="font-family: 'Dancing Script', cursive; font-size: 20px;"">PC: Hasan Nadeem</div>
   </section>
 
   <!-- PAGE 2 -->
@@ -329,6 +333,8 @@
         </div>
       </details>
     </div>
+
+    <p class="tribute" style="position: absolute; bottom: 5px; left: 40px; font-family: 'Baskerville'; font-size: 18px;"">In Memory of Dr. Stephen Njau</p>
   </section>
 
   <!-- Husky Modal -->
@@ -342,10 +348,6 @@
       </div>
     </div>
   </div>
-
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-
-  <div class="credit" style="font-family: 'Dancing Script', cursive; font-size: 20px;"">PC: Hasan Nadeem</div>
 
   <script>
     // Equalize column heights to the tallest
