Index.html Homeless Health

--- a/index.html
+++ b/index.html
@@ -332,6 +332,13 @@
           <a href="https://www.hopkinsmedicine.org/-/media/center-for-transgender-health/documents/tgd-gaht-quick-guide.ashx" class="sparkle-btn" target="_blank" rel="noopener">Transgender Health Medications</a>
         </div>
       </details>
+
+      <details>
+        <summary>Homeless Health Resources</summary>
+        <div class="accordion-content">
+          <a href="https://www.emeraldcityresourceguide.org/" class="sparkle-btn" target="_blank" rel="noopener">Emerald City Resource Guide</a>
+        </div>
+      </details>
     </div>
 
     <p class="tribute" style="position: absolute; bottom: 5px; left: 40px; font-family: 'Baskerville'; font-size: 18px;"">In Memory of Dr. Stephen Njau</p>
