Index.html new links

--- a/index.html
+++ b/index.html
@@ -290,10 +290,14 @@
       <details>
         <summary>UW Cafeterias</summary>
         <div class="accordion-content">
-          <a href="https://depts.washington.edu/plazacaf/" 
+          <a href="https://depts.washington.edu/plazacaf/"  
             class="sparkle-btn" target="_blank" rel="noopener">UW Montlake Plaza Cafe</a>
           <a href="https://one.uwmedicine.org/sites/hmc/NutritionFoodServices/Pages/CafeteriaMenu.aspx" 
             class="sparkle-btn" target="_blank" rel="noopener">Harborview Cafeteria</a>
+          <a href="https://www.uwmedicine.org/locations/uw-medical-center-northwest/dining-options" 
+            class="sparkle-btn" target="_blank" rel="noopener">UW Northwest cafes</a>
+          <a href="https://www.va.gov/puget-sound-health-care/locations/seattle-va-medical-center/#Dining" 
+            class="sparkle-btn" target="_blank" rel="noopener">VA Patriot Cafe</a>
         </div>
       </details>
 
@@ -314,6 +318,7 @@
           <a href="https://adamzcheng.com/articles/0cheatsheets/list.php" class="sparkle-btn" target="_blank" rel="noopener">Adam's Hematology</a>
           <a href="https://wikem.org/wiki/Main_Page" class="sparkle-btn" target="_blank" rel="noopener">WikEM</a>
           <a href="https://radiopaedia.org/search?q=&scope=all&lang=us" class="sparkle-btn" target="_blank" rel="noopener">Radiopaedia</a>
+          <a href="https://www.nccn.org/" class="sparkle-btn" target="_blank" rel="noopener">NCCN</a>
         </div>
       </details>
 
