--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       </details>
     </div>
 
-    <p class="tribute" style="position: absolute; bottom: 5px; left: 40px; font-family: 'Baskerville'; font-size: 18px;"">In Memory of Dr. Stephen Njau</p>
+    <a href="https://joshbloomstein.github.io/ghitools/photo.html" target ="_blank" style="color: white; text-decoration: none; position: absolute; bottom: 5px; left: 40px; font-family: 'Baskerville'; font-size: 18px;"">In Memory of Dr. Stephen Njau</p>
   </section>
 
   <!-- Husky Modal -->
