--- a/photo.html
+++ b/photo.html
@@ -20,6 +20,6 @@
 </style>
 </head>
 <body>
-  <img src="https://joshbloomstein.github.io/ghitools/assets/images/photo.jpg" alt="Full image">
+  <img src="https://joshbloomstein.github.io/ghitools/Screenshot 2025-07-27 160123.jpg" alt="Full image">
 </body>
 </html>
