--- a/photo.html
+++ b/photo.html
@@ -14,7 +14,7 @@
   img {
     width: 100%;
     height: 100%;
-    object-fit: contain; /* ensures full image fits on one screen */
+    object-fit: contain;
     display: block;
   }
 </style>
