--- a/photo.html
+++ b/photo.html
@@ -8,8 +8,10 @@
   html, body {
     margin: 0;
     height: 100%;
-    background-color: black;
+    background: #000;
     overflow: hidden;
+    color: #fff;
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
   }
   img {
     width: 100%;
@@ -17,9 +19,37 @@
     object-fit: contain;
     display: block;
   }
+  .error {
+    position: absolute;
+    inset: 0;
+    display: none;
+    place-items: center;
+    padding: 16px;
+    text-align: center;
+    background: #000;
+  }
+  .error a { color: #fff; text-decoration: underline; }
 </style>
 </head>
 <body>
-  <img src="https://joshbloomstein.github.io/ghitools/Screenshot 2025-07-27 160123.jpg" alt="Full image">
+  <img id="photo"
+       src="Screenshot 2025-07-27 160123.jpg"
+       alt="Full image"
+       onerror="document.querySelector('.error').style.display='grid'; this.style.display='none';">
+
+  <div class="error">
+    <div>
+      <div style="margin-bottom:8px;">
+        Couldn’t load the image. Check the URL, file name (case), repo/branch,
+        and that the file is public.
+      </div>
+      <a id="directLink" href="#" target="_blank" rel="noopener">Open image URL directly</a>
+    </div>
+  </div>
+
+  <script>
+    const img = document.getElementById('photo');
+    document.getElementById('directLink').href = img.src;
+  </script>
 </body>
 </html>
