Photo.html update 3

--- a/photo.html
+++ b/photo.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <img id="photo"
-       src="Screenshot 2025-07-27 160123.jpg"
+       src="Screenshot.jpg"
        alt="Full image"
        onerror="document.querySelector('.error').style.display='grid'; this.style.display='none';">
 
