--- a/photo.html
+++ b/photo.html
@@ -34,7 +34,7 @@
 <body>
   <img id="photo"
        src="Screenshot.jpg"
-       alt="Full image"
+       alt="Stephen"
        onerror="document.querySelector('.error').style.display='grid'; this.style.display='none';">
 
   <div class="error">
