Index.html Homeless Resources

--- a/index.html
+++ b/index.html
@@ -393,6 +393,9 @@
         <div class="accordion-content">
           <a href="https://www.emeraldcityresourceguide.org/" class="sparkle-btn" target="_blank" rel="noopener">Emerald City Resource Guide</a>
         </div>
+        <div class="accordion-content">
+          <a href="https://joshbloomstein.github.io/ghitools/Community_Resources_Seattle.pdf" class="sparkle-btn" target="_blank" rel="noopener">Community Resources in Seattle</a>
+        </div>
       </details>
     </div>
 
