Index.html Homeless Resources 2

--- a/index.html
+++ b/index.html
@@ -392,11 +392,11 @@
         <summary>Homeless Health Resources</summary>
         <div class="accordion-content">
           <a href="https://www.emeraldcityresourceguide.org/" class="sparkle-btn" target="_blank" rel="noopener">Emerald City Resource Guide</a>
-        </div>
-        <div class="accordion-content">
           <a href="https://joshbloomstein.github.io/ghitools/Community_Resources_Seattle.pdf" class="sparkle-btn" target="_blank" rel="noopener">Community Resources in Seattle</a>
+          <a href="https://joshbloomstein.github.io/ghitools/Harm_Reduction_Tips.pdf" class="sparkle-btn" target="_blank" rel="noopener">Harm Reduction Tips</a>
+          <a href="https://joshbloomstein.github.io/ghitools/Local_Substance_Use_Resources_Seattle.pdf" class="sparkle-btn" target="_blank" rel="noopener">Local Substance Use Resources</a>
         </div>
-      </details>
+        </details>
     </div>
 
     <a href="https://joshbloomstein.github.io/ghitools/photo.html" target ="_blank" style="color: white; text-decoration: none; position: absolute; bottom: 5px; left: 40px; font-family: 'Baskerville'; font-size: 18px;"">In Memory of Dr. Stephen Njau</p>
