Index.html underline

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         </details>
     </div>
 
-    <a href="https://joshbloomstein.github.io/ghitools/photo.html" target ="_blank" style="color: white; text-decoration: none; position: absolute; bottom: 5px; left: 40px; font-family: 'Baskerville'; font-size: 18px;"">In Memory of Dr. Stephen Njau</p>
+    <a href="https://joshbloomstein.github.io/ghitools/photo.html" target ="_blank" style="color: white; text-decoration: underline; position: absolute; bottom: 5px; left: 40px; font-family: 'Baskerville'; font-size: 18px;"">In Memory of Dr. Stephen Njau</p>
   </section>
 
   <!-- Husky Modal -->
